--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ header {
   transform: translateX(-50%);
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 5rem;
   background-color: var(--light-green);
   backdrop-filter: blur(10px);
@@ -44,6 +45,7 @@ header {
   border-radius: 30px;
   z-index: 1001;
 }
+
 .logo span {
   color: var(--text-color);
 }
@@ -158,6 +160,7 @@ section {
   left: 0;
   right: 0;
   height: 100%;
+  width: 30vw;
   border-radius: 20%;
   opacity: 0;
   transition: 0.5s ease;
@@ -207,6 +210,9 @@ section {
   font-weight: 500;
   text-wrap: nowrap;
   transition: 0.2s ease-in-out;
+}
+.btn a {
+  text-decoration: none;
 }
 .btn:hover {
   background: linear-gradient(
@@ -283,7 +289,7 @@ section {
 /* skills */
 .skills-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   gap: 5rem;
   justify-content: center;
   align-items: center;
