--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@
   box-sizing: border-box;
   color: var(--text-color);
 }
+html {
+  scroll-behavior: smooth;
+}
 h1,
 h2,
 h3 {
@@ -197,6 +200,13 @@ section {
 .info-box p {
   color: #bfcfbb;
   font-size: 2rem;
+}
+.about-text {
+  font-family: "IBM Plex Sans", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  max-width: 500px;
+  color: #bfcfbb;
+  text-align: center;
 }
 .btn-group {
   display: flex;
